Changelog
=========

1.1 - (Unreleased)
------------------

1.0 - (2010-07-01)
------------------
* Initial release [ghicaale]